--- a/app/src/main/res/layout/article_preview_item.xml
+++ b/app/src/main/res/layout/article_preview_item.xml
@@ -7,61 +7,62 @@
     android:padding="8dp" >
 
     <ImageView
-        android:id="@+id/ivArticleImage"
+        android:id="@+id/article_image_iv"
         android:layout_width="160dp"
         android:layout_height="90dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/article_image_preview" />
 
     <TextView
-        android:id="@+id/tvSource"
+        android:id="@+id/source_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="SOURCE"
+        android:text="@string/source"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivArticleImage" />
+        app:layout_constraintTop_toBottomOf="@+id/article_image_iv" />
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/title_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="3"
-        android:text="TITLE"
+        android:text="@string/title"
         android:textColor="@android:color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
+        app:layout_constraintLeft_toRightOf="@+id/article_image_iv"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvDescription"
+        android:id="@+id/description_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ellipsize="end"
         android:maxLines="5"
-        android:text="DESCRIPTION"
+        android:text="@string/description"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintStart_toEndOf="@+id/article_image_iv"
+        app:layout_constraintTop_toBottomOf="@+id/title_tv" />
 
     <TextView
-        android:id="@+id/tvPublishedAt"
+        android:id="@+id/published_at_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="PUBLISHED AT"
+        android:text="@string/published_at"
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSource" />
+        app:layout_constraintTop_toBottomOf="@+id/source_tv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
