--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,5 +48,9 @@
         android:id="@+id/articleFragment"
         android:name="com.gnova.breakingnewsapp.ui.article.ArticleFragment"
         android:label="Article"
-        tools:layout="@layout/fragment_article" />
+        tools:layout="@layout/fragment_article" >
+        <argument
+            android:name="article"
+            app:argType="com.gnova.domain.models.Article" />
+    </fragment>
 </navigation>
