--- a/app/src/main/res/layout/fragment_search_news.xml
+++ b/app/src/main/res/layout/fragment_search_news.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/searchNews"
+        android:id="@+id/search_news_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
