--- a/app/src/main/res/drawable-xhdpi/loading_animation.xml
+++ b/app/src/main/res/drawable-xhdpi/loading_animation.xml
@@ -20,4 +20,5 @@
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
     android:drawable="@drawable/loading_img"
     android:pivotX="50%"
-    android:pivotY="50%" />
+    android:pivotY="50%"
+    />
